[project]
name = "letta-example-langgraph"
version = "0.1.0"
description = "This example demonstrates how to use LangGraph with Letta."
authors = [
    { name = "Madhur Prashant" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3.10",
    "langchain==0.3.13",
    "langchain-aws>=0.2.10",
    "langchain-community>=0.3.13",
    "langchainhub>=0.1.21",
    "zmq>=0.0.0",
    "ipykernel>=6.29.5",
    "jupyter-client>=8.6.3",
    "tavily-python>=0.5.1",
    "pandas>=2.2.3",
    "faker>=36.1.0,<37.0.0",
    "ragas>=0.2.14",
    "letta==0.6.48",
    "letta-client==0.1.76",
    "llama-index>=0.11.23",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-embeddings-langchain>=0.2.1",
    "httpx>=0.28.1",
]
